[gd_scene load_steps=16 format=3 uid="uid://blwyb80tpldxb"]

[ext_resource type="Script" uid="uid://2anfk75352qw" path="res://scripts/menus/pause_menu.gd" id="1_83na2"]

[sub_resource type="Animation" id="Animation_8wiok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(409, 0)]
}

[sub_resource type="Animation" id="Animation_vmokf"]
resource_name = "pause_slide_in"
length = 0.2
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(409, 648), Vector2(409, 0)]
}

[sub_resource type="Animation" id="Animation_ykost"]
resource_name = "reset"
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0666667),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(409, 648)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rn2qp"]
_data = {
&"RESET": SubResource("Animation_8wiok"),
&"pause_slide_in": SubResource("Animation_vmokf"),
&"reset": SubResource("Animation_ykost")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_loyjt"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6o3w0"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3t38a"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ged0c"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dps5p"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gi80i"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekmyp"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abyvj"]
bg_color = Color(0.69, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vws7g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gesil"]

[node name="pause_menu" type="CanvasLayer" node_paths=PackedStringArray("menu", "anim", "focus_button")]
layer = 6
script = ExtResource("1_83na2")
menu = NodePath("Panel")
anim = NodePath("AnimationPlayer")
focus_button = NodePath("Panel/VBoxContainer/resume")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rn2qp")
}

[node name="Panel" type="Panel" parent="."]
visibility_layer = 2
z_index = 4
z_as_relative = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.0
offset_right = 167.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_loyjt")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = 283.0
offset_right = 160.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6o3w0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3t38a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ged0c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_dps5p")
theme_override_styles/hover = SubResource("StyleBoxFlat_gi80i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ekmyp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_abyvj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vws7g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gesil")
text = "Resume"

[node name="restart" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6o3w0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3t38a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ged0c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_dps5p")
theme_override_styles/hover = SubResource("StyleBoxFlat_gi80i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ekmyp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_abyvj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vws7g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gesil")
text = "Restart"

[node name="settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6o3w0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3t38a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ged0c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_dps5p")
theme_override_styles/hover = SubResource("StyleBoxFlat_gi80i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ekmyp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_abyvj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vws7g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gesil")
text = "Settings"

[node name="main_menu_exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6o3w0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3t38a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ged0c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_dps5p")
theme_override_styles/hover = SubResource("StyleBoxFlat_gi80i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ekmyp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_abyvj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vws7g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gesil")
text = "Main Menu"

[node name="exit_desktop" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6o3w0")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3t38a")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ged0c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_dps5p")
theme_override_styles/hover = SubResource("StyleBoxFlat_gi80i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_ekmyp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_abyvj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_vws7g")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gesil")
text = "Desktop"

[connection signal="pressed" from="Panel/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/main_menu_exit" to="." method="_on_main_menuu_exit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/exit_desktop" to="." method="_on_exit_desktop_pressed"]
